--- a/settings.json
+++ b/settings.json
@@ -3,5 +3,15 @@
   "SimMode": "Multirotor",
   "LocalHostIp": "0.0.0.0",
   "RpcEnabled": true,
-  "RpcPort": 41451
+  "RpcPort": 41451,
+  "Vehicles": {
+    "Drone1": {
+      "VehicleType": "SimpleFlight",
+      "X": 0, "Y": 0, "Z": 0
+    },
+    "Drone2": {
+      "VehicleType": "SimpleFlight",
+      "X": 5, "Y": 0, "Z": 0
+    }
+  }
 }
